--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.42",
+  "version": "0.3.44",
   "private": true,
   "browser": {
     "fs": false,
@@ -29,7 +29,7 @@
     "server:json": "cd backend && json-server --watch db_v2.json",
     "server:kill": "killall \"ng serve\"",
     "server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
-    "server:ng": "npm run clear:all && npm run cp && ng serve --host 0.0.0.0  --watch",
+    "server:ng": "npm run cp && ng serve --host 0.0.0.0  --watch",
     "server:run": "npm run cp && ng build --watch",
     "start": "concurrently --kill-others \"npm run server:ng\" \"npm run server:json\"",
     "test": "ng test",
@@ -52,7 +52,7 @@
     "@angular/router": "^17.0.0",
     "@aws-amplify/cli": "^12.8.2",
     "@compodoc/compodoc": "^1.1.23",
-    "@faker-js/faker": "^8.4.0",
+    "@faker-js/faker": "^8.4.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@types/lodash": "^4.14.202",
     "bootstrap": "^5.3.2",
@@ -119,7 +119,6 @@
     "eslint-config-standard": "17.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-standard": "5.0.0",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
     "karma-coverage": "~2.2.1",
