--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "tsConfig": "tsconfig.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/favicon/favicon.ico",
               "src/assets",
               {
                 "glob": "*.svg",
@@ -70,12 +70,12 @@
               "outputHashing": "all"
             },
             "optimization": {
-              "scripts": true,
-              "styles": {
-                "minify": true,
-                "inlineCritical": true
-              },
-              "fonts": true
+              "buildOptimizer": true,
+              "optimization": true,
+              "vendorChunk": false,
+              "extractLicenses": true,
+              "sourceMap": false,
+              "namedChunks": false
             },
             "development": {
               "buildOptimizer": false,
@@ -91,14 +91,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "project-name:build"
+            "buildTarget": "3d-inventory-angular-ui:build:development"
           },
           "configurations": {
             "production": {
-              "browserTarget": "3d-inventory-angular-ui:build:production"
+              "buildTarget": "3d-inventory-angular-ui:build:production"
             },
             "development": {
-              "browserTarget": "3d-inventory-angular-ui:build:development"
+              "buildTarget": "3d-inventory-angular-ui:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -106,7 +106,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "3d-inventory-angular-ui:build"
+            "buildTarget": "3d-inventory-angular-ui:build"
           }
         },
         "test": {
