--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.34.0",
+  "version": "0.35.0",
   "private": true,
   "browser": {
     "fs": false,
@@ -82,9 +82,10 @@
     "jquery": "^3.7.1",
     "jsdom": "^24.1.0",
     "lodash": "^4.17.21",
+    "marked": "^12.0.2",
     "mkdirp": "^3.0.1",
     "nav-bar": "^1.0.3",
-    "ngx-markdown": "^17.0.0",
+    "ngx-markdown": "^17.2.1",
     "ngx-pagination": "^6.0.3",
     "node-gyp": "^10.2.0",
     "node-sass": "^9.0.0",
