--- a/package.json
+++ b/package.json
@@ -12,27 +12,29 @@
   },
   "scripts": {
     "prebuild": "npm version patch --no-git-tag-version",
-    "build": "ng build 3d-inventory-angular-ui --verbose",
+    "build": "ng build 3d-inventory-angular-ui --verbose  --configuration production",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
-    "compodoc": "npx compodoc -p tsconfig.doc.json",
-    "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
-    "compodoc:serve": "compodoc -s",
+    "compodoc": "compodoc -p tsconfig.doc.json",
+    "compodoc:build-and-serve": "npx compodoc -p tsconfig.doc.json -s",
+    "compodoc:serve": "npx compodoc -s",
     "cp": "cpx README.md src/assets",
+    "docker:build": "npm run minor && npm run security:check && docker build -t 3d-inventory-ui . && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
+    "docker:push": "echo $CR_PAT | docker login ghcr.io -u karol-preiskorn --password-stdin && docker push ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
+    "docker:run": "docker run -p 4200:433 3d-inventory-ui",
     "eslint": "eslint --fix src",
     "kill-ng-serve": "fkill --force \"ng serve\"",
     "lint": "ng lint",
     "lint:eslint": "eslint --fix src",
     "lint:prettier": "prettier --write src/**/*.ts",
+    "minor": "npm version minor --no-git-tag-version",
+    "pre-commit": "npm run lint && npm run lint:eslint && npm run",
+    "security:check": "npm audit --audit-level high && npm run lint",
+    "security:fix": "npm audit fix",
     "prestart": "npx kill-port 4200 && npm version patch --no-git-tag-version",
     "start": "npm run cp && ng serve",
     "test": "jest",
-    "minor": "npm version minor --no-git-tag-version",
     "upgrade-full": "npm-check-updates -u && npm upgrade",
-    "watch": "npm --no-git-tag-version version patch && ng serve --watch",
-    "docker:build": "npm run minor && docker build -t 3d-inventory-ui . && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
-    "docker:push": "docker push ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
-    "docker:run": "docker run -p 4200:433 3d-inventory-ui",
-    "pre-commit": "npm run lint && npm run lint:eslint && npm run"
+    "watch": "npm --no-git-tag-version version patch && ng serve --watch"
   },
   "husky": {
     "hooks": {
@@ -51,19 +53,19 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^20.0.4",
-    "@angular/common": "^20.0.4",
-    "@angular/compiler": "^20.0.4",
-    "@angular/core": "^20.0.4",
-    "@angular/forms": "^20.0.4",
-    "@angular/platform-browser": "^20.0.4",
-    "@angular/platform-browser-dynamic": "^20.0.4",
-    "@angular/platform-server": "^20.0.4",
-    "@angular/router": "^20.0.4",
+    "@angular/animations": "^20.0.6",
+    "@angular/common": "^20.0.6",
+    "@angular/compiler": "^20.0.6",
+    "@angular/core": "^20.0.6",
+    "@angular/forms": "^20.0.6",
+    "@angular/platform-browser": "^20.0.6",
+    "@angular/platform-browser-dynamic": "^20.0.6",
+    "@angular/platform-server": "^20.0.6",
+    "@angular/router": "^20.0.6",
     "@compodoc/compodoc": "^1.1.26",
-    "@faker-js/faker": "^9.8.0",
-    "@jest/globals": "^30.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^19.0.0",
+    "@faker-js/faker": "^9.9.0",
+    "@jest/globals": "^30.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@octokit/core": "^7.0.2",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
@@ -74,11 +76,10 @@
     "depcheck": "^1.4.7",
     "eslint-scope": "^8.4.0",
     "express": "^5.1.0",
-    "firebase": "^11.9.1",
+    "firebase": "^11.10.0",
     "font-awesome": "^4.7.0",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
-    "jquery": "^3.7.1",
     "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
@@ -104,55 +105,52 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.0.3",
+    "@angular-devkit/build-angular": "^20.0.5",
     "@angular-eslint/builder": "^20.1.1",
     "@angular-eslint/eslint-plugin": "^20.1.1",
     "@angular-eslint/eslint-plugin-template": "^20.1.1",
     "@angular-eslint/schematics": "^20.1.1",
     "@angular-eslint/template-parser": "^20.1.1",
-    "@angular/build": "^20.0.3",
-    "@angular/cli": "^20.0.3",
-    "@angular/compiler-cli": "^20.0.4",
-    "@angular/localize": "^20.0.4",
-    "@babel/preset-env": "^7.27.2",
+    "@angular/build": "^20.0.5",
+    "@angular/cli": "^20.0.5",
+    "@angular/compiler-cli": "^20.0.6",
+    "@angular/localize": "^20.0.6",
+    "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
-    "@eslint/compat": "^1.3.0",
+    "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.29.0",
+    "@eslint/js": "^9.30.1",
     "@types/cors": "^2.8.19",
     "@types/eslint": "^9.6.1",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__eslintrc": "^3.3.0",
     "@types/eslint__js": "^9.14.0",
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.8",
-    "@types/jest": "^30.0.0",
-    "@types/jquery": "^3.5.32",
+    "@types/jest": "^29.5.0",
     "@types/karma-coverage": "^2.0.3",
     "@types/karma-jasmine": "^4.0.5",
     "@types/karma-jsdom-launcher": "^8.0.5",
-    "@types/lodash": "^4.17.18",
+    "@types/lodash": "^4.17.20",
     "@types/mocha": "^10.0.10",
-    "@types/mongodb": "^4.0.7",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.10",
     "@types/node-sass": "^4.11.8",
     "@types/path-browserify": "^1.0.3",
     "@types/prismjs": "^1.26.5",
     "@types/showdown": "^2.0.6",
-    "@types/three": "^0.177.0",
+    "@types/three": "^0.178.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.34.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "angular-cli-ghpages": "^2.0.3",
-    "babel-jest": "^30.0.2",
+    "babel-jest": "^30.0.4",
     "cpx": "^1.5.0",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-node": "11.1.0",
-    "globals": "^16.2.0",
+    "globals": "^16.3.0",
     "jasmine-core": "~5.8.0",
-    "jest": "^29.7.0",
-    "jest-runner-prettier": "^1.0.0",
+    "jest": "^29.5.0",
     "karma": "~6.4.4",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
@@ -161,8 +159,8 @@
     "lint-staged": "^16.1.2",
     "ng-packagr": "^20.0.1",
     "nyc": "^17.1.0",
-    "prettier": "3.5.3",
-    "three": "^0.177.0",
+    "prettier": "3.6.2",
+    "three": "^0.178.0",
     "typescript": "^5.8.3",
     "unique-names-generator": "^4.7.1"
   },
