--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.42.7",
+  "version": "0.43.1",
   "private": true,
   "type": "module",
   "browser": {
@@ -11,14 +11,14 @@
     "process": false
   },
   "scripts": {
-    "prebuild": "npm version patch --no-git-tag-version",
     "build": "ng build 3d-inventory-angular-ui --verbose",
     "clear": "rm -rf dist documentation ./nyc_output ./node_modules ./package-lock.json ./target",
     "compodoc": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "npx compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "npx compodoc -s",
     "cp": "cpx README.md src/assets",
-    "docker:build": "npm run security:check && docker build -t 3d-inventory-ui . && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
+    "docker:build": "docker build -t 3d-inventory-ui . && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:latest && docker tag 3d-inventory-ui ghcr.io/karol-preiskorn/3d-inventory-ui:$(node -p \"require('./package.json').version\")",
+    "docker:compile": "npm run minor && ./build.sh",
     "docker:push": "echo $CR_PAT | docker login ghcr.io -u karol-preiskorn --password-stdin && docker push ghcr.io/karol-preiskorn/3d-inventory-ui:latest",
     "docker:run": "docker run -p 4200:433 3d-inventory-ui",
     "eslint": "eslint --fix src",
@@ -122,9 +122,8 @@
     "@eslint/js": "^9.30.1",
     "@types/cors": "^2.8.19",
     "@types/eslint": "^9.6.1",
-    "@types/eslint-config-prettier": "^6.11.3",
-    "@types/eslint__eslintrc": "^3.3.0",
     "@types/eslint__js": "^9.14.0",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.8",
     "@types/jest": "^29.5.0",
