--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ GH_REPO=your-gh_repo
 GH_REPO_URL=your-gh_repo_url
 GHCR_PAT=your-ghcr_pat
 BASEURL=your-baseurl
+GCP_PROJECT_ID=your-gcp_project_id
+GCP_REGION=your-gcp_region
 EXPOSED_PORT=your-exposed_port
