--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "strictPropertyInitialization": false,
     "target": "ES2022",
     "types": [
-      "node"
+      "node",
+      "jest"
     ]
   },
   "exclude": [
